@@ -1,4 +1,6 @@
 2.5.x -> 2.90
+	- package install/removal much smarter about symlinks
+	- redid install/remove API to allow transaction semantics
 	- support for GPG (Toshio Kuratomi <badger@prtr-13.ucsc.edu>)
 	- file lookup finally sane wrt symbolic links :-)
 	- fileindex format changed -- rebuilddb is necessary for rpm 2.90!!
